--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,11 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.icon-xlarge {
+    font-size : 80px;
+}
+
+$gray : #666;
+$gray-300 : #CCC;
+$dark : #222;
