Adding a barcode scan icon

--- a/src/pages/scan/scan.scss
+++ b/src/pages/scan/scan.scss
@@ -28,6 +28,10 @@ page-scan {
         }
     }
 
+    .barcode-icon {
+        
+    }
+
     .barcode-wrapper {
         text-align: center;
         padding: 0;
