--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,6 +19,14 @@
     font-size : 80px;
 }
 
+.row {
+    flex : 1;
+}
+
+.col {
+    padding : 0;
+}
+
 $gray : #666;
 $gray-300 : #CCC;
 $dark : #222;
