--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,19 +9,20 @@
         }
  
         .card {
-            height: 220px;
-            max-height: 220px;
+            height: 280px;
+            max-height: 280px;
             width: 98%;
             margin-top: 0px;
             margin-bottom: 15px;
-            padding : 6%;
-            border-radius: 6%;
+            padding : 4%;
+            border-radius: 15px;
 
             .logo {
                 padding : 0;
                 margin-bottom: 10px;
 
                 img {
+                    position: absolute;
                     height : 100%;
                     max-height: 100%;
                     width: 100%;
@@ -40,6 +41,7 @@
                         max-height: 100%;
                         width : 100%;
                         max-width: 100%;
+                        border-radius: 5px;
                     }
             }
         }
