Tweaking the barcode component

--- a/src/pages/scan/scan.scss
+++ b/src/pages/scan/scan.scss
@@ -35,9 +35,9 @@ page-scan {
 
         svg
         {
-            height: 234px;
-            width: 98%;
-            border-radius: 4%;
+            height: 100%;
+            width: 100%;
+            border-radius: 5px;
         }
     }
 }
