--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -30,7 +30,7 @@
                 }
             }
 
-            .card-barcode { 
+            .barcode-wrapper { 
                     height: 100%;
                     max-height: 100%;
                     width : 100%;
