Adding the app logo to the home page

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -4,6 +4,11 @@
             background: $dark;
         }
 
+        .app-logo { 
+            height: 30px;
+            // width: 75px;
+        }
+
         .list-ios {
             margin : 0;
         }
