Tweaking the placeholder

--- a/src/components/barcode/barcode.html
+++ b/src/components/barcode/barcode.html
@@ -3,5 +3,5 @@
 </div>
 
 <div [hidden]="validCardNumber">
-    <img src="assets/barcode_placeholder.svg">
+    <img src="assets/barcode_placeholder.svg" class="placeholder">
 </div>
