--- a/src/pages/scan/scan.scss
+++ b/src/pages/scan/scan.scss
@@ -3,7 +3,7 @@ page-scan {
     .card {
         width: 98%;
         margin-top: 10px;
-        padding : 1%;
+        padding : 10px;
         border-radius: 6%;
         border: solid 1px $gray-300;
     }
@@ -12,7 +12,7 @@ page-scan {
         padding : 0;
 
         img {
-            height : 25px;
+            height : 35px;
             margin-top: 20px;
             margin-bottom: 20px;
             margin-left: 5px;
