Tweaking the placeholder img

--- a/src/components/barcode/barcode.html
+++ b/src/components/barcode/barcode.html
@@ -2,6 +2,6 @@
     <svg #barcode id="barcode"></svg>
 </div>
 
-<div [hidden]="validCardNumber">
-    <img src="assets/barcode_placeholder.svg" class="placeholder">
+<div [hidden]="validCardNumber" class="placeholder">
+    <img src="assets/barcode_placeholder.svg">
 </div>
