--- a/src/components/barcode/barcode.scss
+++ b/src/components/barcode/barcode.scss
@@ -1,7 +1,14 @@
 barcode { 
     .placeholder {
+        height: 100%;
+        width : 100%;
         background: white;
         border-radius: 5px;
         padding: 15px;
+
+        img {
+            height: 100%;
+            width: 100%;
+        }
     }
 }
