--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,6 +8,11 @@
             height: 30px;
         }
 
+        .large-app-logo {
+            height: 300px;
+            width: 100%;
+        }
+
         .list-ios {
             margin : 0;
         }
@@ -53,13 +58,21 @@
         .add-card-wrapper {
             background: $dark;
             text-align: center; 
-            padding-top: 60px;
-            padding-bottom: 60px;
+            padding: 0;
             border : 1px solid $gray-300;
             border-radius: 8%;
             width : 98%;
             margin : 1%;
             
+            ion-grid {
+                height : 100%;
+                padding : 0;
+            
+                ion-col {
+                    margin-top : -30px;
+                }
+            }
+
             ion-icon {
                 color: $gray-300;
             }
