Remove border from nav bar

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -37,6 +37,10 @@
             margin-right: 0px;
         }
     }
+
+     .toolbar-background-ios {
+         border : none;
+     }
 }
 
 $gray : #666;
