Only remove the border on the home screen

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,9 @@
 #wallet {
     page-home {
+        .toolbar-background-ios {
+         border : none;
+        }
+        
         ion-content {
             background: $dark;
         }
