--- a/src/components/card-name/card.name.scss
+++ b/src/components/card-name/card.name.scss
@@ -1,3 +1,15 @@
- comment {
+#wallet {
+ card-name {
+.invalid {  
+        .item-inner {
+            border-bottom: 0.55px solid red;
+        }
+    } 
 
+    .invalid-lbl {
+        color: red;
+        padding-left: 16px;
+        font-size : 1.2rem;
+    }
  }
+}
