--- a/src/components/barcode/barcode.html
+++ b/src/components/barcode/barcode.html
@@ -2,6 +2,78 @@
     <svg #barcode id="barcode"></svg>
 </div>
 
-<div [hidden]="validCardNumber" class="placeholder">
-    <img src="assets/barcode_placeholder.svg">
+<div [hidden]="validCardNumber">
+    <svg *ngIf="showMediumBarcode()" id="barcode" width="495px" height="172px" x="0px" y="0px" viewBox="0 0 495 172" xmlns="http://www.w3.org/2000/svg"
+        version="1.1" style="transform: translate(0px, 0px);">
+        <rect x="0" y="0" width="495" height="172" style="fill:#ffffff;"></rect>
+        <g transform="translate(10, 10)" style="fill:#CCCCCC;">
+            <rect x="0" y="0" width="5" height="150"></rect>
+            <rect x="10" y="0" width="5" height="150"></rect>
+            <rect x="25" y="0" width="10" height="150"></rect>
+            <rect x="45" y="0" width="5" height="150"></rect>
+            <rect x="60" y="0" width="5" height="150"></rect>
+            <rect x="75" y="0" width="10" height="150"></rect>
+            <rect x="90" y="0" width="20" height="150"></rect>
+            <rect x="115" y="0" width="5" height="150"></rect>
+            <rect x="125" y="0" width="5" height="150"></rect>
+            <rect x="145" y="0" width="10" height="150"></rect>
+            <rect x="160" y="0" width="10" height="150"></rect>
+            <rect x="185" y="0" width="5" height="150"></rect>
+            <rect x="195" y="0" width="5" height="150"></rect>
+            <rect x="205" y="0" width="20" height="150"></rect>
+            <rect x="230" y="0" width="5" height="150"></rect>
+            <rect x="240" y="0" width="5" height="150"></rect>
+            <rect x="250" y="0" width="5" height="150"></rect>
+            <rect x="270" y="0" width="5" height="150"></rect>
+            <rect x="285" y="0" width="5" height="150"></rect>
+            <rect x="300" y="0" width="5" height="150"></rect>
+            <rect x="320" y="0" width="15" height="150"></rect>
+            <rect x="340" y="0" width="5" height="150"></rect>
+            <rect x="355" y="0" width="15" height="150"></rect>
+            <rect x="380" y="0" width="5" height="150"></rect>
+            <rect x="390" y="0" width="10" height="150"></rect>
+            <rect x="410" y="0" width="10" height="150"></rect>
+            <rect x="425" y="0" width="10" height="150"></rect>
+            <rect x="440" y="0" width="10" height="150"></rect>
+            <rect x="460" y="0" width="5" height="150"></rect>
+            <rect x="470" y="0" width="5" height="150"></rect>
+        </g>
+    </svg>
+
+    <svg *ngIf="!showMediumBarcode()" id="barcode" width="400px" height="242px" x="0px" y="0px" viewBox="0 0 400 242" xmlns="http://www.w3.org/2000/svg"
+        version="1.1" style="transform: translate(0px, 0px);">
+        <rect x="0" y="0" width="400" height="242" style="fill:#ffffff;"></rect>
+        <g transform="translate(10, 10)" style="fill:#CCCCCC;">
+            <rect x="0" y="0" width="4" height="220"></rect>
+            <rect x="8" y="0" width="4" height="220"></rect>
+            <rect x="20" y="0" width="8" height="220"></rect>
+            <rect x="36" y="0" width="4" height="220"></rect>
+            <rect x="48" y="0" width="4" height="220"></rect>
+            <rect x="60" y="0" width="8" height="220"></rect>
+            <rect x="72" y="0" width="16" height="220"></rect>
+            <rect x="92" y="0" width="4" height="220"></rect>
+            <rect x="100" y="0" width="4" height="220"></rect>
+            <rect x="116" y="0" width="8" height="220"></rect>
+            <rect x="128" y="0" width="8" height="220"></rect>
+            <rect x="148" y="0" width="4" height="220"></rect>
+            <rect x="156" y="0" width="4" height="220"></rect>
+            <rect x="164" y="0" width="16" height="220"></rect>
+            <rect x="184" y="0" width="4" height="220"></rect>
+            <rect x="192" y="0" width="4" height="220"></rect>
+            <rect x="200" y="0" width="4" height="220"></rect>
+            <rect x="216" y="0" width="4" height="220"></rect>
+            <rect x="228" y="0" width="4" height="220"></rect>
+            <rect x="240" y="0" width="4" height="220"></rect>
+            <rect x="256" y="0" width="12" height="220"></rect>
+            <rect x="272" y="0" width="4" height="220"></rect>
+            <rect x="284" y="0" width="12" height="220"></rect>
+            <rect x="304" y="0" width="4" height="220"></rect>
+            <rect x="312" y="0" width="8" height="220"></rect>
+            <rect x="328" y="0" width="8" height="220"></rect>
+            <rect x="340" y="0" width="8" height="220"></rect>
+            <rect x="352" y="0" width="8" height="220"></rect>
+            <rect x="368" y="0" width="4" height="220"></rect>
+            <rect x="376" y="0" width="4" height="220"></rect>
+        </g>
+    </svg>
 </div>
