--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -43,6 +43,13 @@
                 }
             }
 
+            .card-name {
+                color : white;
+                text-align: center;
+                font-size: 40px;
+                font-weight: 500;
+            }
+
             .barcode-wrapper { 
                     height: 100%;
                     max-height: 100%;
