--- a/src/pages/edit/edit.scss
+++ b/src/pages/edit/edit.scss
@@ -19,6 +19,16 @@ page-edit {
         }
     }
 
+    .card-name {
+            color : white;
+            text-align: center;
+            font-size: 40px;
+            font-weight: 500;
+            height: 49px;
+            padding-left: 5px;
+            padding-right: 5px;
+    }
+
     .toolbar-ios {
         padding-top: 24px;        
         min-height: 64px;
