--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -48,6 +48,8 @@
                 text-align: center;
                 font-size: 40px;
                 font-weight: 500;
+                padding-left: 5px;
+                padding-right: 5px;
             }
 
             .barcode-wrapper { 
