--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -15,6 +15,7 @@
         .large-app-logo {
             height: 300px;
             width: 100%;
+            padding-bottom: 20px;
         }
 
         .list-ios {
