Tweaking the home screen

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,6 +10,11 @@
 
         .app-logo { 
             height: 20px;
+            padding-left: 2px;
+        }
+
+        .add-card-lbl {
+            font-size: 1.7rem;
         }
 
         .large-app-logo {
