Card number changes

--- a/src/components/card-number/card.number.scss
+++ b/src/components/card-number/card.number.scss
@@ -19,6 +19,10 @@ card-number {
         max-width: percentage(.15);
     }
 
+    .card-number-input {
+        font-size: 2.5rem;
+    }
+
     .barcode-icon {
         height : 45px;
         width : 45px;
