--- a/src/components/card-number/card.number.html
+++ b/src/components/card-number/card.number.html
@@ -3,7 +3,7 @@
         <ion-col col-10>
             <ion-item [ngClass]="{'warning': !isExpectedFormat(), 'error': !hasValue()}">
                 <ion-label stacked>Card Number</ion-label>
-                <ion-input class="card-number-input" type="text" [(ngModel)]="num" (ngModelChange)="numChange.emit($event)"></ion-input>
+                <ion-input class="card-number-input" type="number" [(ngModel)]="num" (ngModelChange)="numChange.emit($event)"></ion-input>
             </ion-item>
         </ion-col>
 
