--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -79,7 +79,7 @@
             text-align: center; 
             padding: 0;
             border : 1px solid $gray-300;
-            border-radius: 8%;
+            border-radius: 15px;
             width : 98%;
             margin : 1%;
             
