--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -20,7 +20,8 @@
         .large-app-logo {
             height: 300px;
             width: 100%;
-            padding-bottom: 20px;
+            padding-bottom: 5px;
+            padding-top : 5px;
         }
 
         .list-ios {
