--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,5 @@
 // http://ionicframework.com/docs/v2/theming/
-
+@import "node_modules/resp-sass/src/resp-mixin";
 
 // App Global Sass
 // --------------------------------------------------
