Replace clicks with taps for better responsiveness

--- a/src/components/card-number/card.number.html
+++ b/src/components/card-number/card.number.html
@@ -7,7 +7,7 @@
             </ion-item>
         </ion-col>
 
-        <ion-col col-2 align-self-end no-padding (click)="scanBarcode()">
+        <ion-col col-2 align-self-end no-padding (tap)="scanBarcode()">
             <img class="barcode-icon" src="assets/scan_barcode.svg" />
         </ion-col>
     </ion-row>
